Restructure code using classes

--- a/example.ipynb
+++ b/example.ipynb
@@ -2,15 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "initial_id",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-04T23:28:17.592764Z",
+     "start_time": "2025-02-04T23:28:16.722857Z"
+    }
+   },
+   "outputs": [],
    "source": [
     "%matplotlib ipympl\n",
     "from __init__ import plot_utility\n",
     "plot_utility()"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   }
  ],
  "metadata": {
